// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render repository correctly 1`] = `
<div>
  SonarQube
  <span
    className="note little-spacer-left"
  >
    css
  </span>
</div>
`;

exports[`should render search repository correctly 1`] = `
<div>
  <mark>
    Son
  </mark>
  arQube
  <span
    className="note little-spacer-left"
  >
    css
  </span>
</div>
`;
